--- a/Android/main/src/main/res/layout/display_card.xml
+++ b/Android/main/src/main/res/layout/display_card.xml
@@ -15,7 +15,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#e6e6e6"
+            android:elevation="4dp"
             android:padding="10dp">
 
             <TextView
@@ -34,6 +34,15 @@
                 android:layout_alignParentLeft="true"
                 android:layout_below="@+id/cardTitle"
                 android:text="Test Content Example"/>
+            
+            <ImageView
+                android:id="@+id/cardMenu"
+                android:layout_width="20dp"
+                android:layout_height="30dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_more_vert_24dp"/>
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
